[package]
name = "vswitch"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
libc = "0.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
axum = "0.8"
jsonwebtoken = "9"
tokio = { version = "1", features = ["rt", "net"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
aes-gcm = "0.10"
hmac = "0.12"
sha2 = "0.10"
bcrypt = "0.18.0"
rpassword = "7.4.0"
clap = { version = "4.5.59", features = ["derive"] }
ahash = "0.8.12"
fxhash = "0.2.1"
